--- a/style/style.css
+++ b/style/style.css
@@ -130,25 +130,60 @@ body {
   z-index: 1;
 }
 
-.form-container_pass::after {
-  content: ' ';
-  display: block;
+.form-container_pass input:focus {
+  border: 1px solid #DBE0E4;
+}
+
+.form-container_pass span {
   position: absolute;
   width: 18px;
   height: 18px;
   top: 14px;
   right: 13px;
+  -webkit-transition: 0.1s ease;
+  transition: 0.1s ease;
   background-image: url("../img/passWatch-icon.png");
+  cursor: pointer;
   z-index: 1;
 }
 
-.form-container_pass input:focus {
-  border: 1px solid #DBE0E4;
+.form-container_pass .pass_visibility__hidden {
+  -webkit-transform: scale(1.5, 0.3);
+          transform: scale(1.5, 0.3);
+}
+
+.form-container_country {
+  position: relative;
+}
+
+.form-container_country .country_arrow {
+  display: inline-block;
+  position: absolute;
+  top: 18px;
+  right: 20px;
+  width: 6px;
+  height: 6px;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  border-bottom: 0.5px solid #4d4d4d;
+  border-right: 0.5px solid #4d4d4d;
+  z-index: 1;
+  pointer-events: none;
+}
+
+.form-container_country .country_arrow__rotate {
+  top: 22px;
+  -webkit-transform: rotate(-135deg) !important;
+          transform: rotate(-135deg) !important;
 }
 
 .form-container_country select {
+  position: relative;
   padding-left: 32px;
   padding-right: 10px;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
 }
 
 .form-container .form-container_country select:focus {
@@ -165,15 +200,35 @@ body {
 }
 
 .form-container_agreement {
+  position: relative;
   padding-left: 10px;
 }
 
 .form-container_agreement label {
-  padding-left: 6px;
+  padding-left: 26px;
+}
+
+.form-container_agreement label:before {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  top: 2.5px;
+  left: 10px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 100% 100%;
+  width: 13px;
+  height: 13px;
+  border: 0.5px solid #ADB5BD;
 }
 
 .form-container_agreement label a {
-  color: #625fff;
+  color: #0094FF;
 }
 
 .form-container_sign-in input {
@@ -186,6 +241,41 @@ body {
   border-radius: 12px;
 }
 
+#user_terms {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+#user_terms:checked + label::before {
+  border-color: #0094FF;
+}
+
+#user_terms:checked + label::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  width: 2px;
+  height: 7px;
+  border-bottom: 0.5px solid #0094FF;
+  border-right: 0.5px solid #0094FF;
+  top: 4px;
+  left: 16px;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.required_field:after {
+  content: 'Requierd Field';
+  display: inline-block;
+  position: absolute;
+  font-size: 10px;
+  width: 70px;
+  top: 55px;
+  left: 20px;
+  color: #FF0000;
+}
+
 .sign-in__active {
   background: #0094FF;
 }
@@ -194,12 +284,7 @@ body {
   border: 1px solid #DBE0E4 !important;
 }
 
-.germany {
-  margin-top: 10px;
-  padding-top: 10px;
-}
-
-#selectId * {
-  background-color: red;
+.form_button__active {
+  background: #0094FF !important;
 }
 /*# sourceMappingURL=style.css.map */
