--- a/style/style.css
+++ b/style/style.css
@@ -33,6 +33,8 @@ body {
 .wrapper {
   margin: 0 auto;
   padding: 0 20px;
+  -webkit-transform: translateY(25%);
+          transform: translateY(25%);
 }
 
 .form-wrapper {
@@ -148,8 +150,8 @@ body {
 }
 
 .form-container_pass .pass_visibility__hidden {
-  -webkit-transform: scale(1.5, 0.3);
-          transform: scale(1.5, 0.3);
+  -webkit-transform: scale(1.5, 0.2);
+          transform: scale(1.5, 0.2);
 }
 
 .form-container_country {
