--- a/style/style.scss
+++ b/style/style.scss
@@ -28,6 +28,8 @@ body {
 .wrapper { 
     margin: 0 auto;
     padding: 0 20px;
+    transform: translateY(25%);
+
 }
 .form-wrapper {
     display: flex;
@@ -112,7 +114,7 @@ body {
             z-index: 1;
         }
         & .pass_visibility__hidden {
-            transform: scale(1.5, 0.3);
+            transform: scale(1.5, 0.2);
         }
     }
     &_country {
