--- a/style/style.css
+++ b/style/style.css
@@ -158,7 +158,7 @@ body {
   border: 1px solid #DBE0E4;
 }
 
-.form-container_pass span {
+.form-container_pass .pass_visibility {
   position: absolute;
   width: 18px;
   height: 18px;
@@ -304,13 +304,12 @@ body {
 }
 
 .validation-message {
-  position: absolute;
   font-size: 10px;
   color: red;
-  padding-top: 50px;
+  padding-top: 5px;
   padding-left: 10px;
-  width: 150px !important;
-  height: 20px;
+  width: 150px;
+  height: 33px;
   pointer-events: none;
 }
 
