--- a/style/style.scss
+++ b/style/style.scss
@@ -111,7 +111,7 @@ body {
         & input:focus {
             border: 1px solid #DBE0E4;
         }
-        & span {
+        & .pass_visibility {
             position: absolute;
             width: 18px;
             height: 18px;
@@ -237,15 +237,12 @@ body {
 }
 
 .validation-message {
-    position: absolute;
     font-size: 10px;
     color: red;
-    padding-top: 50px;
+    padding-top: 5px;
     padding-left: 10px;
-    // background-color: red;
-    width: 150px !important;
-    height: 20px;
-    // z-index: 3;
+    width: 150px;
+    height: 33px;
     pointer-events: none;
 }
 
