--- a/style/style.css
+++ b/style/style.css
@@ -261,10 +261,12 @@ body {
   color: #0094FF;
 }
 
-.form-container_sign-in input {
+.form-container_sign-in #form_button {
   font-size: 18px;
   line-height: 21px;
   color: #fff;
+  width: 100%;
+  height: 45px;
   padding: 0;
   background: #A2A2A2;
   border: #DBE0E4;
